# ProductionCPLEX

./: .gitignore  CMakeLists.txt  README.md
include/: ProductionCPLEX.h
opl/: .oplproject  .project  projekt-artykul-SPP-Dual.mod  projekt-artykul-SPP-Primal.mod  projekt-artykul-base.mod  projekt-artykul-colgen.mod  projekt-artykul-pricing.mod
src/: ProductionBaseCPLEX.cpp  ProductionColGenCPLEX.cpp
